@@ -9,13 +9,14 @@ import com.wbsrisktaskerx.wbsrisktaskerx.pojo.response.PermissionResponse;
 import com.wbsrisktaskerx.wbsrisktaskerx.repository.PermissionRepository;
 import com.wbsrisktaskerx.wbsrisktaskerx.repository.RolePermissionRepository;
 import com.wbsrisktaskerx.wbsrisktaskerx.repository.RoleRepository;
-import jakarta.persistence.EntityManager;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.lang3.ObjectUtils;
 import org.springframework.stereotype.Service;
 
-import java.util.*;
-import java.util.stream.Collectors;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 @Service
 @RequiredArgsConstructor
@@ -24,7 +25,6 @@ public class PermissionService implements IPermissionService {
     private final PermissionRepository permissionRepository;
     private final RolePermissionRepository rolePermissionRepository;
     private final RoleRepository roleRepository;
-    private final EntityManager entityManager;
 
     @Override
     public List<PermissionResponse> getAllPermissionsWithChildren() {
@@ -62,40 +62,32 @@ public class PermissionService implements IPermissionService {
     }
 
     @Override
-    public void updateRolePermissions(int roleId, List<Integer> newPermissionIds) {
-        List<RolePermission> rolePermissions = rolePermissionRepository.findByRoleId(roleId);
-        Set<Integer> existingPermissionIds = rolePermissions.stream()
+    public void updateRolePermissions(Role role, List<Integer> newPermissionIds) {
+        List<RolePermission> rolePermissions = rolePermissionRepository.findByRoleId(role.getId());
+        List<Integer> existingPermissionIds = rolePermissions.stream()
                 .map(rp -> rp.getPermission().getId())
-                .collect(Collectors.toSet());
-
-        Set<Integer> updatedPermissionIds = newPermissionIds.stream()
-                .filter(pid -> pid > 0)
-                .collect(Collectors.toSet());
-
-        List<Integer> permissionIdToDelete = existingPermissionIds.stream()
-                .filter(pid -> !updatedPermissionIds.contains(pid))
                 .toList();
 
-        List<Integer> permissionIdToAdd = updatedPermissionIds.stream()
-                .filter(pid -> !existingPermissionIds.contains(pid))
+        List<Integer> permissionIdToDelete = existingPermissionIds.stream()
+                .filter(pid -> !newPermissionIds.contains(pid))
+                .toList();
+
+        List<Integer> permissionIdToAdd = newPermissionIds.stream()
+                .filter(pid -> pid > 0 && !existingPermissionIds.contains(pid))
                 .toList();
 
         if (!permissionIdToDelete.isEmpty()) {
             List<RolePermission> rolePermissionsToDelete = rolePermissions.stream()
                     .filter(rp -> permissionIdToDelete.contains(rp.getPermission().getId()))
-                    .collect(Collectors.toList());
+                    .toList();
             rolePermissionRepository.deleteAllInBatch(rolePermissionsToDelete);
         }
 
         if (!permissionIdToAdd.isEmpty()) {
-            Role role = roleRepository.findById(roleId)
-                    .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_FOUND));
-
             List<RolePermission> newRolePermissions = permissionIdToAdd.stream()
                     .map(pid -> RolePermission.builder()
                             .role(role)
-                            .permission(permissionRepository.findById(pid)
-                                    .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND)))
+                            .permission(findPermissionById(pid))
                             .build())
                     .toList();
 
@@ -111,6 +103,11 @@ public class PermissionService implements IPermissionService {
                         rp.getPermission().getKey(),
                         rp.getPermission().getName()))
                 .toList();
+    }
+
+    private Permission findPermissionById(Integer id) {
+        return permissionRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.PERMISSION_NOT_FOUND));
     }
 
 }
